--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
-  "name": "Crowd_Fund_assets",
+  "name": "escrow_manager_assets",
   "version": "0.1.0",
   "description": "Internet Computer starter application",
-  "keywords": ["Internet Computer", "Motoko", "JavaScript", "Canister"],
+  "keywords": [
+    "Internet Computer",
+    "Motoko",
+    "JavaScript",
+    "Canister"
+  ],
   "scripts": {
     "build": "webpack",
     "prebuild": "npm run copy:types",
@@ -22,6 +27,8 @@
     "process": "0.11.10",
     "stream-browserify": "3.0.0",
     "terser-webpack-plugin": "5.2.5",
+    "ts-loader": "^9.3.0",
+    "typescript": "^4.7.3",
     "util": "0.12.4",
     "webpack": "5.72.0",
     "webpack-cli": "4.9.2",
